debian-installer-utils (1.18) UNRELEASED; urgency=low

  * Make apt-get use gpgv --ignore-time-conflict to avoid validation errors
    due to clock problems.

 -- Colin Watson <cjwatson@debian.org>  Thu, 17 Nov 2005 12:59:43 +0000

debian-installer-utils (1.17) unstable; urgency=low

  [ Joey Hess ]
  * Indentation consistency.

  [ Colin Watson ]
  * Add myself to debian/copyright for log-output.

  [ Frans Pop ]
  * Also mount /target/sys in apt-install to support installation of 2.6.14
    and higher kernels using yaird/initramfs-tools.

  [ Joey Hess ]
  * Ignore shell return code in postinst script since it can exit nonzero
    in several normal uses.

  [ Updated translations ]
  * Bengali (bn.po) by Baishampayan Ghose
  * Hindi (hi.po) by Nishant Sharma
  * Icelandic (is.po) by David Steinn Geirsson
  * Norwegian Nynorsk (nn.po)
  * Swedish (sv.po) by Daniel Nylander
  * Tagalog (tl.po) by Eric Pareja

 -- Frans Pop <fjp@debian.org>  Tue, 15 Nov 2005 20:40:50 +0100

debian-installer-utils (1.16) unstable; urgency=low

  [ Colin Watson ]
  * Replace log-output with a C implementation that doesn't stomp on fds 3
    and 4, and which is therefore usable for debootstrap logging.
    Unfortunately this requires making di-utils Architecture: any.

  [ Updated translations ]
  * Romanian (ro.po) by Eddy Petrisor

 -- Colin Watson <cjwatson@debian.org>  Sun,  2 Oct 2005 11:27:52 +0100

debian-installer-utils (1.15) unstable; urgency=low

  * Change log-output to require passing the syslog tag using '-t TAG', like
    logger(1).

 -- Colin Watson <cjwatson@debian.org>  Thu, 22 Sep 2005 18:36:20 +0100

debian-installer-utils (1.14) unstable; urgency=low

  [ Joey Hess ]
  * Use log-output in apt-install.

  [ Colin Watson ]
  * Add --pass-stdout option to log-output, so that you can log just stderr
    and send stdout to a file or a pipe.

 -- Colin Watson <cjwatson@debian.org>  Thu, 22 Sep 2005 10:20:17 +0100

debian-installer-utils (1.13) unstable; urgency=low
