@@ -39,3 +39,8 @@ and preserving the command's exit code. If you use the --pass-stdout option,
 it will pass stdout through rather than logging it, so that you can redirect
 it to a file or pipe it to another process. Note that the command must be
 in the path, shell builtins won't work.
+
+debconf-disconnect: Scripts running under the control of debconf can use
+this to execute a command disconnected from debconf, with its standard file
+descriptors the same as those of the debconf frontend itself. This is most
+useful for starting interactive shells.
