@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 4.2), dpkg-dev (>= 1.9.0), libdebconfclient0-dev (>
 
 Package: di-utils-shell
 Architecture: all
-Depends: cdebconf-udeb (>= 0.73)
+Depends: cdebconf-udeb (>= 0.73), di-utils (>= 1.18)
 XB-Installer-Menu-Item: 950
 Description: Execute a shell
 XC-Package-Type: udeb
