@@ -33,9 +33,9 @@ binary-arch: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_install -pdi-utils anna-install apt-install debconf-get \
-	                      debconf-set log-output register-module \
-			      search-path user-params bin
+	dh_install -pdi-utils anna-install apt-install debconf-disconnect \
+	                      debconf-get debconf-set log-output \
+	                      register-module search-path user-params bin
 	dh_installdirs -pdi-utils usr/lib/prebaseconfig.d
 	install register-module.prebaseconfig debian/di-utils/usr/lib/prebaseconfig.d/50register-module
 	dh_install -pdi-utils-mapdevfs mapdevfs bin
