@@ -2,6 +2,8 @@ debian-installer-utils (1.18) UNRELEASED; urgency=low
 
   * Make apt-get use gpgv --ignore-time-conflict to avoid validation errors
     due to clock problems.
+  * Split out part of di-utils-shell.postinst into a new debconf-disconnect
+    command; rescue-mode uses the same code.
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 17 Nov 2005 12:59:43 +0000
 
